public/resources/styles/index.css
html {
  height: 100%;
}
body {
  margin: 0;
  min-height: 100%;
}

.banner {
  padding-block-end: 1rem;
  height: 200px;
  display: grid;
  align-items: end;
  background-image: url(https://picsum.photos/id/704/1900/400);
  background-position-x: center;
  background-size: cover;
}
@media screen and (min-width: 768px) {
  .banner {
    padding-block-end: 2rem;
    height: 400px;
  }
}

.cart {
  width: 100%;
  overflow-x: hidden;
}
.cart__content {
  margin-inline-start: auto;
  padding: 1rem;
  width: 300px;
  max-width: 85lvw;
  min-height: 100%;
  background-color: white;
  box-shadow: 0 0 1rem black;
  box-sizing: border-box;
}
@media screen and (min-width: 768px) {
  .cart__content {
    width: 400px;
  }
}

.collapsed__end--block {
  margin-block-end: 0;
}
.collapsed__start--block {
  margin-block-start: 0;
}

.flexed,
.flexed--center {
  display: flex;
}
.flexed--center {
  align-items: center;
}

.layered {
  display: grid;
}
.layered__child,
.layered__child--order-1 {
  grid-area: 1/1 / 1/1;
}
.layered__child--order-1 {
  order: 1;
}

.menu__content {
  padding-inline: 2rem;
}
@media screen and (min-width: 768px) {
  .menu__content {
    padding-inline: 8rem;
  }
}

.page {
  display: grid;
  grid-template-rows:
    [page__header] auto
    [page__content] 1fr
    [page__footer] auto;
}
.page__header {
  z-index: 1;
  grid-row: page__header;
  position: sticky;
  top: 0;
  padding: 1rem;
  background-color: orange;
  box-shadow: 0 0 1rem black;
}
.page__content {
  grid-row: page__content;
  background-color: white;
}
.page__footer {
  grid-row: page__footer;
  height: 12rem;
  background-color: lightgray;
}
.page__logo {
  font-size: x-large;
  font-weight: bold;
  font-family: sans-serif;
  color: white;
  text-decoration: none;
}

.ratio--1-1 {
  aspect-ratio: 1/1;
}

.restaurant__logo {
  border-radius: .75rem;
  box-shadow: 0 0 .75rem black;
}

.separated,
.separated--inline-start {
  display: grid;
}
.separated--inline-start {
  grid-template-columns: 1fr;
  grid-auto-columns: auto;
  grid-auto-flow: column;
}
.separated__child--order-1 {
  order: 1;
}

